--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   connectivity: ^3.0.6
   device_info_plus: ^0.0.1
   change_app_package_name: ^1.1.0
+  device_information: ^0.0.4
 
 
 
